@@ -1,5 +1,6 @@
 package com.sila.config;
 
+import com.sila.exception.UnauthorizedException;
 import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -22,31 +23,28 @@ public class AppConfig {
     @Bean
     SecurityFilterChain securityFilterChain(HttpSecurity http)throws Exception{
         http.sessionManagement(management->management.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .authorizeHttpRequests(Authorize->Authorize.requestMatchers("/api/admin/**").hasAnyRole("RESTAURANT_OWNER","ADMIN").
+                .authorizeHttpRequests(Authorize->Authorize.requestMatchers("/api/admin/**").hasAnyRole("ADMIN").
                     requestMatchers("/api/**").authenticated().anyRequest().permitAll()).addFilterBefore(new JwtTokenValidator(), BasicAuthenticationFilter.class).csrf(csrf-> {
               try {
                 csrf.disable().cors(cors->cors.configurationSource(corsConfigrationSource()));
               } catch (Exception e) {
-                throw new RuntimeException(e);
+                throw new UnauthorizedException("AuthorizedException : "+e);
               }
             });
         return http.build();
     }
 
     private CorsConfigurationSource corsConfigrationSource() {
-        return new CorsConfigurationSource() {
-            @Override
-            public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
-                CorsConfiguration cfg=new CorsConfiguration();
-                cfg.setAllowedOrigins(List.of("http://localhost:3000","https://next-js-wow-now.vercel.app",
-                        "http://localhost:3030","http://192.168.1.8:3030","http://192.168.1.8:3000"));
-                cfg.setAllowedMethods(Collections.singletonList("*"));
-                cfg.setAllowCredentials(true);
-                cfg.setAllowedHeaders(Collections.singletonList("*"));
-                cfg.setExposedHeaders(List.of("Authorization"));
-                cfg.setMaxAge(3600L);
-                return cfg;
-            }
+        return request -> {
+            CorsConfiguration cfg=new CorsConfiguration();
+            cfg.setAllowedOrigins(List.of("http://localhost:3000","https://next-js-wow-now.vercel.app",
+                    "http://localhost:3030","http://192.168.1.8:3030","http://192.168.1.8:3000","*"));
+            cfg.setAllowedMethods(Collections.singletonList("*"));
+            cfg.setAllowCredentials(true);
+            cfg.setAllowedHeaders(Collections.singletonList("*"));
+            cfg.setExposedHeaders(List.of("Authorization"));
+            cfg.setMaxAge(3600L);
+            return cfg;
         };
     }
     @Bean
